# data_analyser

./: .gitignore  CMakeLists.txt  README.md
src/processing/: analyser.cpp  analyser.hpp  analyticsIndicator.cpp  analyticsIndicator.hpp
tests/: test_basic.cpp  test_extra_new_line.cpp  test_missing_number.cpp  test_no_file.cpp  test_string_as_value.cpp
tests/sample_files/: missing_number.txt  string_as_value.txt  temp_output.txt
